--- a/SPCOIN.csproj
+++ b/SPCOIN.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.2.3" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
+    <PackageReference Include="materialize" Version="0.97.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
