--- a/SPCOIN.csproj
+++ b/SPCOIN.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.2.3" />
+    <PackageReference Include="Chart.js" Version="3.7.1" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="materialize" Version="0.97.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
