opciones en reparacion funcionando

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexion": "Data Source=SQL5092.site4now.net;Initial Catalog=db_a54053_pachecos;User Id=db_a54053_pachecos_admin;Password=Marlon1989"
-    //   "conexion": "server=DESKTOP-2T8F1VD; database=db_a54053_pachecos;Integrated Security=True"
+    //    "conexion": "Data Source=SQL5092.site4now.net;Initial Catalog=db_a54053_pachecos;User Id=db_a54053_pachecos_admin;Password=Marlon1989"
+    "conexion": "server=DESKTOP-2T8F1VD; database=db_a54053_pachecos;Integrated Security=True"
   }
 }
