--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexion": "Data Source=SQL5092.site4now.net;Initial Catalog=db_a54053_pachecos;User Id=db_a54053_pachecos_admin;Password=Marlon1989"
-    //  "conexion": "server=DESKTOP-2T8F1VD; database=db_a54053_pachecos;Integrated Security=True"
+    // "conexion": "Data Source=SQL5092.site4now.net;Initial Catalog=db_a54053_pachecos;User Id=db_a54053_pachecos_admin;Password=Marlon1989"
+    "conexion": "server=DESKTOP-2T8F1VD; database=db_a54053_pachecos;Integrated Security=True"
     //  "conexion": "Data Source=SQL5070.site4now.net;Initial Catalog=db_a54053_distyaretzy;User Id=db_a54053_distyaretzy_admin;Password=Marlon1989",
     //  // "conexion": "Data Source=SQL5099.site4now.net;Initial Catalog=db_a54053_comercialanderson2;User Id=db_a54053_comercialanderson2_admin;Password=Marlon1989"
 
